# RPOSystemMonitoringServer

./: CMakeLists.txt  Constants.h  README.md  Session.cpp  Session.h  Utils.h  auth.cpp  auth.h  config.cpp  config.h  configTemplate.cfg  main.cpp  protocol.cpp  protocol.h  server.cpp  server.h
components/: component.cpp  component.h  cpu.cpp  cpu.h  data.h  disk.cpp  disk.h  gpu.cpp  gpu.h  network.cpp  network.h  ram.cpp  ram.h  system.cpp  system.h
html/: _r_e_a_d_m_e_8md.html  annotated.html  annotated_dup.js  auth_8cpp.html  auth_8h.html  auth_8h.js  auth_8h_source.html  class_auth-members.html  class_auth.html  class_auth.js  class_component-members.html  class_component.html  class_component.js  class_config-members.html  class_config.html  class_config.js  class_cpu-members.html  class_cpu.html  class_cpu.js  class_disk-members.html  class_disk.html  class_disk.js  class_file_exception-members.html  class_file_exception.html  class_file_exception.js  class_gpu-members.html  class_gpu.html  class_gpu.js  class_network-members.html  class_network.html  class_network.js  class_property_not_found_exception-members.html  class_property_not_found_exception.html  class_property_not_found_exception.js  class_protocol-members.html  class_protocol.html  class_protocol.js  class_ram-members.html  class_ram.html  class_ram.js  (+60 more)
html/search/: all_0.js  all_1.js  all_10.js  all_12.js  all_2.js  all_3.js  all_4.js  all_6.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_f.js  classes_1.js  classes_2.js  classes_4.js  classes_6.js  classes_7.js  classes_8.js  files_1.js  files_2.js  files_3.js  files_7.js  files_8.js  functions_0.js  functions_1.js  functions_10.js  functions_11.js  functions_2.js  functions_3.js  functions_5.js  functions_6.js  functions_7.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  functions_f.js  pages_0.js  (+1 more)
jsonExamples/: clientAuth.json  newData.json  newUpdateSystem.json  userAuth.json
server/: main.cpp  server.cpp  server.h
tests/: run_tests.h  test_0_connection.h  test_1_authentication.h  test_2_identification.h  test_3_new_system.h  test_4_adding_data.h
